hphp/test/slow/call_static/1894.php.expectf

Fatal error: Call to undefined method a1::foo() in %s/test/slow/call_static/1894.php on line 10
string(7) "errored"
